Añadir sección videos index

--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
             <img src="https://iili.io/GGWVXR.png" alt="fotos exteriores">
             <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
         </section>
+        <section id="p-videos">
+            <h2 class="g-tituloSeccion">
+                La originalidad es volver al origen,<br>
+                y el origen es la naturaleza
+            </h2>
+            <div class="container top">
+                <img src="https://iili.io/VWtEOl.jpg" alt="">
+                <p>Lo que buscamos al diseñar, proyectar y ejecutar tu idea es nexo de armonía entre el hombre y la naturaleza, en diferentes escalas, con cariño y detalles de gran valor.</p>
+            </div>
+            <div class="container bottom">
+                <p>Creando espacios únicos como la naturaleza en sí, enriqueciendo la vida de quienes habiten esos espacios. Manteniendo la estrecha relación entre el entorno natural y el interior.</p>
+                <img src="https://iili.io/VWt1R4.jpg" alt="">
+            </div>
+        </section>
         <section id="introProyectos">
             <h2 class="g-tituloSeccion">Se trabaja cada proyecto como si fuese el primero</h2>
             <div class="contenedorCards">
