--- a/nosotros.html
+++ b/nosotros.html
@@ -48,7 +48,7 @@
         <section id="sobreNosotros">
             <h2 class="g-tituloSeccion">Sobre nosotros</h2>
             <div class="container">
-                <img src="media/12.gif" alt="gif de logo">
+                <video class="video" src="./media/logodeapoco-vid.mp4" autoplay loop></video>
                 <p>Somos una empresa que se dedica a la arquitectura paisajista. Diseñando, creando vida, otorgando emociones y vivencias en zonas degradadas o sin valor. Obteniendo pulmones verdes sin salir del hogar; dando una respuesta de diseño coherente con los tiempos, y comprometida con los recursos. Que nos darán como resultado refugios urbanos naturales, necesarios para descontracturar el ritmo veloz de la vida cotidiana.</p>
             </div>
         </section>
