Arreglar header proyectos

--- a/patiozen.html
+++ b/patiozen.html
@@ -40,8 +40,10 @@
             <li><a href="servicios.html">SERVICIOS</a></li>
         </ul>  
     </nav>
+    <div class="g-title"><h2>Patio Zen</h2></div>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/Mw3tx2.png" alt="Patio Zen"><!--src="https://iili.io/VTTIDP.jpg"-->
+        <img class="g-hero-img" src="https://iili.io/VXBFv2.jpg" alt="Patio Zen">
+        <h2 class="g-hero-title">Patio Zen</h2>
     </div>
     <div class="g-info-container">
         <div class="g-info">
