--- a/cubiertasverdes.html
+++ b/cubiertasverdes.html
@@ -40,8 +40,10 @@
             <li><a href="servicios.html">SERVICIOS</a></li>
         </ul>  
     </nav>
+    <div class="g-title"><h2>Cubiertas Verdes</h2></div>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/MNxW4R.png" alt="Cubiertas Verdes"><!--src="https://iili.io/VTcmlt.png"-->
+        <img class="g-hero-img" src="https://iili.io/VXB16J.jpg" alt="Cubiertas Verdes">
+        <h2 class="g-hero-title">Cubiertas Verdes</h2>
     </div>
     <div class="g-info-container">
         <div class="g-info">
