--- a/fachada.html
+++ b/fachada.html
@@ -40,8 +40,10 @@
             <li><a href="servicios.html">SERVICIOS</a></li>
         </ul>  
     </nav>
+    <div class="g-title"><h2>Fachada</h2></div>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/MNoqDg.png" alt="Fachada"><!--src="https://iili.io/VTToHQ.jpg"-->
+        <img class="g-hero-img" src="https://iili.io/VXBaZF.jpg" alt="Fachada">
+        <h2 class="g-hero-title">Fachada</h2>
     </div>
     <div class="g-info-container">
         <div class="g-info">
