--- a/galeria.html
+++ b/galeria.html
@@ -40,8 +40,10 @@
             <li><a href="servicios.html">SERVICIOS</a></li>
         </ul>  
     </nav>
+    <div class="g-title"><h2>Galería</h2></div>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/MNzH8B.png"alt="Galería"><!--src="https://iili.io/VTTzOB.jpg" -->
+        <img class="g-hero-img" src="https://iili.io/VXBG3v.jpg" alt="Galería"/>
+        <h2 class="g-hero-title">Galería</h2>
     </div>
     <div class="g-info-container">
         <div class="g-info">
