--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="container bottom">
                 <p>Creando espacios únicos como la naturaleza en sí, enriqueciendo la vida de quienes habiten esos espacios. Manteniendo la estrecha relación entre el entorno natural y el interior.</p>
                 <!-- <img src="https://iili.io/VWt1R4.jpg" alt=""> -->
-                <video class="video" src="./media/logodeapoco-vid.mp4" autoplay loop></video>
+                <video class="video" src="./media/logodeapoco-vid.mp4" autoplay loop preload="none"></video>
             </div>
         </section>
         <section id="introProyectos">
