--- a/patiomexicano.html
+++ b/patiomexicano.html
@@ -40,8 +40,10 @@
             <li><a href="servicios.html">SERVICIOS</a></li>
         </ul>  
     </nav>
+    <div class="g-title"><h2>Patio Mexicano</h2></div>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/MwEs7n.png" alt="Patio Mexicano">
+        <img class="g-hero-img" src="https://iili.io/VXBlCg.jpg" alt="Patio Mexicano">
+        <h2 class="g-hero-title">Patio Mexicano</h2>
     </div>
     <div class="g-info-container">
         <div class="g-info">
