--- a/piscinanatural.html
+++ b/piscinanatural.html
@@ -40,8 +40,10 @@
             <li><a href="servicios.html">SERVICIOS</a></li>
         </ul>  
     </nav>
+    <div class="g-title"><h2>Piscina Natural</h2></div>
     <div class="g-hero-img-container">
-        <img class="g-hero-img" src="https://iili.io/MNoQqv.png" alt="Piscina Natural"><!--src="https://iili.io/VTTxRV.jpg"-->
+        <img class="g-hero-img" src="https://iili.io/VXB0Ga.jpg" alt="Piscina Natural">
+        <h2 class="g-hero-title">Piscina Natural</h2>
     </div>
     <div class="g-info-container">
         <div class="g-info">
