agregue alt en cards  de proyectos extendidos

--- a/fachada.html
+++ b/fachada.html
@@ -73,7 +73,7 @@
         <div class="contenedorCards">
             <a href="piscinanatural.html">
                 <div class="cards card1">
-                    <img src="https://iili.io/MU3oKv.jpg" alt="...">
+                    <img src="https://iili.io/MU3oKv.jpg" alt="piscina con rocas estilo natural">
                     <div>
                         <h5 class="g-tituloCards">Piscina Natural</h5>
                         <p>Hacer de tu patio un oasis de relajación y disfrute.</p>
@@ -82,7 +82,7 @@
             </a>
             <a href="cubiertasverdes.html">
                 <div class="cards card2">
-                    <img src="https://iili.io/MU3xlR.webp" alt="...">
+                    <img src="https://iili.io/MU3xlR.webp" alt="Parquización">
                     <div>
                         <h5 class="g-tituloCards">Cubiertas verdes</h5>
                         <p>Las posibilidades de aumentar las áreas verdes, más allá de los patios, parques y jardines, son múltiples.</p>
@@ -91,7 +91,7 @@
             </a>
             <a href="galeria.html">
                 <div class="cards card3">
-                    <img src="https://iili.io/MU3CiJ.jpg" alt="...">
+                    <img src="https://iili.io/MU3CiJ.jpg" alt="galeria de vivienda">
                     <div>
                         <h5 class="g-tituloCards">Galería</h5>
                         <p>Dar solución para lograr la mayor integración con el medio, es nuestro objetivo.</p>
