--- a/cubiertasverdes.html
+++ b/cubiertasverdes.html
@@ -71,7 +71,7 @@
         <div class="contenedorCards">
             <a href="patiozen.html">
                 <div class="cards card1">
-                    <img src="https://iili.io/MUddqx.jpg" alt="...">
+                    <img src="https://iili.io/MUddqx.jpg" alt="imagen con piscina de fondo">
                     <div>
                         <h5 class="g-tituloCards">Patio Zen</h5>
                         <p>Lograr un ambiente fluido y dinámico donde intervienen diferentes actores, generando espacios vividos.</p>
@@ -80,7 +80,7 @@
             </a>
             <a href="patiomexicano.html">
                 <div class="cards card2">
-                    <img src="https://iili.io/MUdjp9.jpg" alt="...">
+                    <img src="https://iili.io/MUdjp9.jpg" alt="patio con cactus estilo mexicano">
                     <div>
                         <h5 class="g-tituloCards">Patio Mexicano</h5>
                         <p>Colocación de elementos arquitectónicos que hacen un espacio en conjugación con la vegetación.</p>
@@ -89,7 +89,7 @@
             </a>
             <a href="fachada.html">
                 <div class="cards card3">
-                    <img src="https://iili.io/MUd20Q.jpg" alt="...">
+                    <img src="https://iili.io/MUd20Q.jpg" alt="fachada de vivienda">
                     <div>
                         <h5 class="g-tituloCards">Fachada</h5>
                         <p>La sencillez, naturalidad y armonía dan como resultado un diseño de buen gusto.</p>
