Quitar br en titulo Home

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         </section>
         <section id="p-videos">
             <h2 class="g-tituloSeccion">
-                La originalidad es volver al origen,<br>
-                y el origen es la naturaleza
+                La originalidad es volver al origen, y el origen es la naturaleza
             </h2>
             <div class="container top">
                 <!-- <img src="https://iili.io/VWtEOl.jpg" alt=""> -->
