Cambiar videos por imagenes

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                 La originalidad es volver al origen, y el origen es la naturaleza
             </h2>
             <div class="container top">
-                <!-- <img src="https://iili.io/VWtEOl.jpg" alt=""> -->
-                <video class="video" src="./media/trigo-vid.mp4" autoplay loop></video>
+                <img class="img-new" src="https://iili.io/VNzckg.jpg" alt="">
+                <!-- <video class="video" src="./media/trigo-vid.mp4" autoplay loop></video> -->
                 <p>Lo que buscamos al diseñar, proyectar y ejecutar tu idea es nexo de armonía entre el hombre y la naturaleza, en diferentes escalas, con cariño y detalles de gran valor.</p>
             </div>
             <div class="container bottom">
                 <p>Creando espacios únicos como la naturaleza en sí, enriqueciendo la vida de quienes habiten esos espacios. Manteniendo la estrecha relación entre el entorno natural y el interior.</p>
-                <!-- <img src="https://iili.io/VWt1R4.jpg" alt=""> -->
-                <video class="video" src="./media/logodeapoco-vid.mp4" autoplay loop preload="none"></video>
+                <img class="img-new" src="https://iili.io/VNzlpa.jpg" alt="">
+                <!-- <video class="video" src="./media/logodeapoco-vid.mp4" autoplay loop preload="none"></video> -->
             </div>
         </section>
         <section id="introProyectos">
