--- a/servicios.html
+++ b/servicios.html
@@ -106,11 +106,11 @@
                 <p>Podemos diseñar un nuevo espacio conjugando la totalidad de su extensión con complementos, elementos arquitectónicos y detalles que hagan a la diferencia. Creando nuevas experiencias, e incorporando nuevos elementos.</p>
             </div>
         </section>
-        <section class="g-contacto">
+        <div class="g-coordinemos-container">
             <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
-            <p>Comunícate por WhatsApp</p>
+            <p>Comunicate por WhatsApp</p>
             <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
-        </section>
+        </div>
     </main>
     <footer>
         <div>
