agregue logo whatsapp

--- a/nosotros.html
+++ b/nosotros.html
@@ -55,7 +55,10 @@
         </section>
         <div class="g-coordinemos-container">
             <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
-            <p>Comunicate por WhatsApp</p>
+            <div class="wsp">
+                <img src="https://iili.io/VX9YfS.jpg" alt="Ícono WhatsApp">
+                <p>Comunicate por WhatsApp</p>
+            </div>
             <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
         </div>
     </main>
