--- a/patiomexicano.html
+++ b/patiomexicano.html
@@ -43,70 +43,73 @@
     </nav>
     <div class="proyecto">
         <div class="g-title"><h2>Patio Mexicano</h2></div>
-            <div class="g-hero-img-container">
-                <img class="g-hero-img" src="https://iili.io/VXBlCg.jpg" alt="Patio Mexicano">
-                <h2 class="g-hero-title">Patio Mexicano</h2>
-            </div>
-            <div class="g-info-container">
-                <div class="g-info">
-                    <div class="container container-left">
-                        <div class="info ubicacion">
-                            <h4 class="g-tituloInfo">Ubicación</h4 class="g-tituloInfo">
-                            <p>Córdoba, Argentina</p>
-                        </div>
+        <div class="g-hero-img-container">
+            <img class="g-hero-img" src="https://iili.io/VXBlCg.jpg" alt="Patio Mexicano">
+            <h2 class="g-hero-title">Patio Mexicano</h2>
+        </div>
+        <div class="g-info-container">
+            <div class="g-info">
+                <div class="container container-left">
+                    <div class="info ubicacion">
+                        <h4 class="g-tituloInfo">Ubicación</h4 class="g-tituloInfo">
+                        <p>Córdoba, Argentina</p>
                     </div>
-                    <div class="container container-right">
-                        <div class="info descripcion">
-                            <h4 class="g-tituloInfo">Descripción</h4 class="g-tituloInfo">
-                            <p>En este jardín de diseño buscamos la estética mexicana con  colores, formas y materiales, consiguiendo un diseño único que se adapte a los gustos y necesidades de nuestro cliente. Las macetas de barro en conjunción con el color óxido de la chapa calada dan una estética rústica y amena. Los cactus de hierro son el detalle fundamental de este jardín.</p>
-                        </div>
+                </div>
+                <div class="container container-right">
+                    <div class="info descripcion">
+                        <h4 class="g-tituloInfo">Descripción</h4 class="g-tituloInfo">
+                        <p>En este jardín de diseño buscamos la estética mexicana con  colores, formas y materiales, consiguiendo un diseño único que se adapte a los gustos y necesidades de nuestro cliente. Las macetas de barro en conjunción con el color óxido de la chapa calada dan una estética rústica y amena. Los cactus de hierro son el detalle fundamental de este jardín.</p>
                     </div>
                 </div>
             </div>
-            <div class="fotos">
-                <img src="https://iili.io/MwGd7e.png" alt="">
-                <img src="https://iili.io/MwEidX.png" alt="">
-                <img src="https://iili.io/MwELes.png" alt="">
-                <img src="https://iili.io/MwEtIf.png" alt="">
-                <img src="https://iili.io/MwEy1S.png" alt="">
+        </div>
+        <div class="fotos">
+            <img src="https://iili.io/MwGd7e.png" alt="">
+            <img src="https://iili.io/MwEidX.png" alt="">
+            <img src="https://iili.io/MwELes.png" alt="">
+            <img src="https://iili.io/MwEtIf.png" alt="">
+            <img src="https://iili.io/MwEy1S.png" alt="">
+        </div>
+        <div class="masProyectos">
+            <h3>Más proyectos como este</h3>
+            <div class="contenedorCards">
+                <a href="piscinanatural.html">
+                    <div class="cards card1">
+                        <img src="https://iili.io/MU3oKv.jpg" alt="piscina con rocas estilo natural">
+                        <div>
+                            <h5 class="g-tituloCards">Piscina Natural</h5>
+                            <p>Hacer de tu patio un oasis de relajación y disfrute.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="cubiertasverdes.html">
+                    <div class="cards card2">
+                        <img src="https://iili.io/MU3xlR.webp" alt="Parquización">
+                        <div>
+                            <h5 class="g-tituloCards">Cubiertas verdes</h5>
+                            <p>Las posibilidades de aumentar las áreas verdes, más allá de los patios, parques y jardines, son múltiples.</p>
+                        </div>
+                    </div>
+                </a>
+                <a href="galeria.html">
+                    <div class="cards card3">
+                        <img src="https://iili.io/MU3CiJ.jpg" alt="galeria de vivienda">
+                        <div>
+                            <h5 class="g-tituloCards">Galería</h5>
+                            <p>Dar solución para lograr la mayor integración con el medio, es nuestro objetivo.</p>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="masProyectos">
-                <h3>Más proyectos como este</h3>
-                <div class="contenedorCards">
-                    <a href="piscinanatural.html">
-                        <div class="cards card1">
-                            <img src="https://iili.io/MU3oKv.jpg" alt="piscina con rocas estilo natural">
-                            <div>
-                                <h5 class="g-tituloCards">Piscina Natural</h5>
-                                <p>Hacer de tu patio un oasis de relajación y disfrute.</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="cubiertasverdes.html">
-                        <div class="cards card2">
-                            <img src="https://iili.io/MU3xlR.webp" alt="Parquización">
-                            <div>
-                                <h5 class="g-tituloCards">Cubiertas verdes</h5>
-                                <p>Las posibilidades de aumentar las áreas verdes, más allá de los patios, parques y jardines, son múltiples.</p>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="galeria.html">
-                        <div class="cards card3">
-                            <img src="https://iili.io/MU3CiJ.jpg" alt="galeria de vivienda">
-                            <div>
-                                <h5 class="g-tituloCards">Galería</h5>
-                                <p>Dar solución para lograr la mayor integración con el medio, es nuestro objetivo.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="g-coordinemos-container">
-                <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
+        </div>
+        <div class="g-coordinemos-container">
+            <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
+            <div class="wsp">
+                <img src="https://iili.io/VX9YfS.jpg" alt="Ícono WhatsApp">
                 <p>Comunicate por WhatsApp</p>
-                <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
             </div>
+            <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
+        </div>
     </div>
     <footer>
         <div>
