--- a/patiozen.html
+++ b/patiozen.html
@@ -63,19 +63,11 @@
         </div>
     </div>
     <div class="fotos">
-        <!--Originales-->
         <img src="https://iili.io/MwRzD7.png" alt="">
         <img src="https://iili.io/MwRh0J.png" alt="">
         <img src="https://iili.io/MwRQbS.png" alt="">
         <img src="https://iili.io/MwRtz7.png" alt="">
         <img src="https://iili.io/MwRLe2.png" alt="">
-
-        <!-- imgupscaler
-        <img src="https://iili.io/VI1nmG.png" alt="">
-        <img src="https://iili.io/VI142t.png" alt="">
-        <img src="https://iili.io/VIEoa1.png" alt="">
-        <img src="https://iili.io/VIEE9n.png" alt="">
-        <img src="https://iili.io/VIEscP.png" alt="">  -->
     </div>
     <div class="masProyectos">
         <h3>Más proyectos como este</h3>
@@ -111,7 +103,10 @@
     </div>
     <div class="g-coordinemos-container">
         <h2 class="g-tituloSeccion">Coordinemos una cita</h2>
-        <p>Comunicate por WhatsApp</p>
+        <div class="wsp">
+            <img src="https://iili.io/VX9YfS.jpg" alt="Ícono WhatsApp">
+            <p>Comunicate por WhatsApp</p>
+        </div>
         <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
     </div>
     <footer>
