Cambiar clase proyectos

--- a/proyectos.html
+++ b/proyectos.html
@@ -43,7 +43,7 @@
     </nav> 
     <main id="proyectos">
         <h1 class="g-tituloPrincipal">Nuestro trabajo</h1>
-        <p>Apuntamos a una arquitectura paisajista donde conjuguen elementos arquitectónicos de diseño, formando un nexo entre el interior y el exterior.</p>
+        <p class="textoPrincipal">Apuntamos a una arquitectura paisajista donde conjuguen elementos arquitectónicos de diseño, formando un nexo entre el interior y el exterior.</p>
         <div class="contenedorCards">
             <a href="./patiozen.html">
                 <div class="cards card1">
