--- a/proyectos.html
+++ b/proyectos.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orígenes Arquitectura</title>
+    <meta name="description" content="Información sobre los proyectos de Orígenes Arquitectura">
+    <meta name="keywords" content="ARQUITECTURA, EDIFICIO, DISEÑO, ESTUDIO, PAISAJISTA, AMBIENTE, ORIGEN, PROYECTOS">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
