--- a/piscinanatural.html
+++ b/piscinanatural.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROYECTO | Piscina Natural</title>
+    <meta name="description" content="Piscina Natural, un proyecto de Orígenes Arquitectura">
+    <meta name="keywords" content="ARQUITECTURA, EDIFICIO, DISEÑO, ESTUDIO, PAISAJISTA, AMBIENTE, ORIGEN, PROYECTO, PISCINA, NATURAL">
     <link rel="stylesheet" href="css/proyectos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
