--- a/patiomexicano.html
+++ b/patiomexicano.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="ARQUITECTURA, EDIFICIO, DISEÑO, ESTUDIO, PAISAJISTA, AMBIENTE, ORIGEN, PROYECTO, PATIO, MEXICANO">
     <link rel="stylesheet" href="css/proyectos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="https://iili.io/ViAfja.png">
 </head>
 <body id="patio-mexicano">
     <nav>
