--- a/servicios.html
+++ b/servicios.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="ARQUITECTURA, EDIFICIO, DISEÑO, ESTUDIO, PAISAJISTA, AMBIENTE, ORIGEN, SERVICIOS">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="https://iili.io/ViAfja.png">
 </head>
 <body id="p-servicios">
     <nav>
