Añadir icono wpp index

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <h1 class="g-tituloPrincipal">Orígenes Arquitectura</h1>
             <p>Arquitectura paisajista es el arte sensible de diseñar espacios abierto habitables</p>
             <img src="https://iili.io/GGWVXR.png" alt="fotos exteriores">
+            <div class="wsp">
+                <img src="https://iili.io/VX9YfS.jpg" alt="Ícono WhatsApp">
+                <p>Comunicate por WhatsApp</p>
+            </div>
             <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow" class="g-button">Conversemos</a>
         </section>
         <section id="p-videos">
