agregue links en footer

--- a/galeria.html
+++ b/galeria.html
@@ -123,8 +123,12 @@
         </div>
         <div>
             <p>Contáctanos</p>
-            <p>Tel. +54 9 351 626-8474</p>
-            <p>frivilli@origenesarquitectura.com.ar</p>
+            <a href="https://iili.io/VX9YfS.jpg" role="button" target="_blank" rel="noopener noreferrer nofollow">
+                <p>Tel. +54 9 351 626-8474</p>
+            </a>
+            <a href="mailto:frivilli@origenesarquitectura.com.ar" role="button" target="_blank" rel="noopener noreferrer nofollow">
+                <p>frivilli@origenesarquitectura.com.ar</p>
+            </a>     
         </div>
     </footer>        
     <script>
