--- a/index.html
+++ b/index.html
@@ -108,11 +108,15 @@
                         </div>
                         <div class="linea">
                             <img src="https://iili.io/VX9YfS.jpg" alt="Ícono WhatsApp">
-                            <p>+54 9 351 626-8474</p>
+                            <a href="https://n9.cl/padlv" target="_blank" rel="noopener noreferrer nofollow">
+                                <p>+54 9 351 626-8474</p>
+                            </a>
                         </div>
                         <div class="linea">
                             <img src="https://iili.io/VX9RWl.jpg" alt="Ícono mensaje">
-                            <p>frivilli@origenesarquitectura.com.ar</p>
+                            <a href="mailto:frivilli@origenesarquitectura.com.ar" role="button" target="_blank" rel="noopener noreferrer nofollow">
+                                <p>frivilli@origenesarquitectura.com.ar</p>
+                            </a>  
                         </div>
                     </div>
                 </div>
@@ -132,8 +136,12 @@
         </div>
         <div>
             <p>Contáctanos</p>
-            <p>Tel. +54 9 351 626-8474</p>
-            <p>frivilli@origenesarquitectura.com.ar</p>
+            <a href="https://iili.io/VX9YfS.jpg" role="button" target="_blank" rel="noopener noreferrer nofollow">
+                <p>Tel. +54 9 351 626-8474</p>
+            </a>
+            <a href="mailto:frivilli@origenesarquitectura.com.ar" role="button" target="_blank" rel="noopener noreferrer nofollow">
+                <p>frivilli@origenesarquitectura.com.ar</p>
+            </a>     
         </div>
     </footer>        
     <script>
